force-app/main/default/objects/NotificationSettings__c/NotificationSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains configurable email settings utilized by certain custom notifications and alerts used in code.
IMPORTANT - Name value should be in ALL CAPS</description>
    <label>Notification Settings</label>
</CustomObject>