force-app/main/default/objects/NotificationSettings__c/fields/CcEmail__c.field-meta.xml
<CustomField>
    <fullName>CcEmail__c</fullName>
    <description>Optional - one or more email addresses separated by semi-colon to receive a copy of the notification or alert.</description>
    <inlineHelpText>Optional - one or more email addresses separated by semi-colon to receive a copy of the notification or alert.</inlineHelpText>
    <label>Cc Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>