force-app/main/default/objects/NotificationSettings__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allows for enabling or disabling of the notification or alert.  If disabled, related notifications will NOT be sent.</description>
    <inlineHelpText>Allows for enabling or disabling of the notification or alert.  If disabled, related notifications will NOT be sent.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>