force-app/main/default/objects/NotificationSettings__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>&apos;NORMAL&apos;</defaultValue>
    <description>Determines how the notification or alert is sent.  Valid entries are HIGH, NORMAL and LOW.</description>
    <inlineHelpText>Determines how the notification or alert is sent.  Valid entries are HIGH, NORMAL and LOW.</inlineHelpText>
    <label>Priority</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>