force-app/main/default/objects/NotificationSettings__c/fields/ReplyToEmail__c.field-meta.xml
<CustomField>
    <fullName>ReplyToEmail__c</fullName>
    <description>The email address to be used if someone replies to the outbound message used by code.  This is normally an administrator or support address.</description>
    <inlineHelpText>The email address to be used if someone replies to the outbound message used by code.  This is normally an administrator or support address.</inlineHelpText>
    <label>Reply To Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>