force-app/main/default/objects/NotificationSettings__c/fields/ToEmail__c.field-meta.xml
<CustomField>
    <fullName>ToEmail__c</fullName>
    <description>Required - Primary email address to receive the notification.</description>
    <inlineHelpText>Required - Primary email address to receive the notification.</inlineHelpText>
    <label>To Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>