force-app/main/default/objects/NotificationSettings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ToEmail__c</columns>
    <columns>CcEmail__c</columns>
    <columns>IsActive__c</columns>
    <columns>ReplyToEmail__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>